# kestrel

./: .gitignore  .gitmodules  CMakeLists.txt  Kestrel.inf  Kestrel.sln  Kestrel.vcxproj  README.md  kestrel.sln  kestrel.vcxproj
TestEDRDriver/: TestEDRDriver.inf  TestEDRDriver.sln  TestEDRDriver.vcxproj
TestEDRDriver/driver/win32/: Driver.c  Driver.h  ProcessHook.c  ProcessHook.h
driver/win64/: Driver.cpp  Driver.h  stdafx.h
kscli/: .gitignore  CMakeLists.txt
kscli/src/: kscli.cpp  kscli.h
kscli/src/platform/common/: RuleLoader.h  RuleSignaturePool.h
libdetutil/: .gitignore  CMakeLists.txt  Makefile
libdetutil/include/libdetutil/: libdetutil.h  string.h
libdetutil/include/libdetutil/kdl/: kdl.h
libdetutil/lib/: libdetutil.c  string.c
libdetutil/test/playground/: md5.c  sha1.c
libdetutil/test/unit/: .gitignore  CMakeLists.txt  test_main.cpp
libkdl/: .editorconfig  .gitignore  CMakeLists.txt  XMLFile1.snippet
libkdl/include/channels/: rule.h  type.h
libkdl/include/conditional/: ConditionalTree.h
libkdl/include/parser/: RuleParser.h  tokens.h
libkdl/lib/channels/: rule.cpp
libkdl/lib/conditional/: ConditionalParser.cpp  ConditionalTree.cpp
libkdl/lib/parser/: RuleParser.cpp  lex.cpp
libkdl/tests/: test.bnf  test.kdl
scripts/: countlines.sh
tests/: 3  test.asm  test.c  test.yar  tset.kdl
